# swperfi-suindara-lib

./: README.md  environment.yml  pyproject.toml  requirements.txt
docs/: calldroploglib.html  index.html  search.js  suindaralib.html
docs/calldroploglib/: model.html  parsing.html
docs/calldroploglib/prediction/: predict.html
docs/calldroploglib/utils/: config.html
docs/suindaralib/: call_drop_pipeline.html  prediction.html  utils.html
docs/suindaralib/parsing/: data_processor.html  log_parser.html
src/: call_drop_pipeline.py
src/model/: xgboost_model_Android_14.pkl
src/parsing/: log_parser.py
src/swperfi_suindara/: __init__.py  call_drop_pipeline.py
src/swperfi_suindara/parsing/: __init__.py  data_processor.py
src/swperfi_suindara/prediction/: __init__.py  predict.py
src/swperfi_suindara/utils/: __init__.py  config.py
